Scrollbar Issue

--- a/css/custom-bootstrap.css
+++ b/css/custom-bootstrap.css
@@ -5943,10 +5943,10 @@ a.close.disabled {
 .modal {
     position: fixed;
     top: 0;
-    left: 2%;
+    left: 0%;
     z-index: 1050;
     display: none;
-    width: 96%;
+    width: 100%;
     height: 100%;
     overflow: hidden;
     outline: 0;
